@@ -2,7 +2,7 @@
  * atari_vga.c - DOS VGA mode specific port code
  *
  * Copyright (c) 1996 Ivo van Poorten
- * Copyright (c) 1996-2005 Atari800 development team (see DOC/CREDITS)
+ * Copyright (c) 1996-2014 Atari800 development team (see DOC/CREDITS)
  *
  * This file is part of the Atari800 emulator project which emulates
  * the Atari 400, 800, 800XL, 130XE, and 5200 8-bit computers.
@@ -892,10 +892,6 @@ int PLATFORM_Exit(int run_monitor)
                         return 1;                       /* return to emulation */
                 }
         }
-
-#ifdef SOUND
-        Sound_Exit();
-#endif
 
         return 0;
 }
